Added some shotcalling tips

--- a/weekly/tt/2f.md
+++ b/weekly/tt/2f.md
@@ -109,7 +109,9 @@ In the last phase, only few people will remain. Make sure you collect the keys q
 
 ### DPS
 
-Make sure you dodge all the lethal lasers on this floor. If you get targeted by the ceilling laser, try to run in a small circle to keep the laser in a small area, and not damage other players. Try to have about 200k hp to at least survive a single explosion
+Make sure you dodge all the lethal lasers on this floor. If you get targeted by the ceilling laser, free any people you can, then try to run in a small circle to keep the laser in a small area, and not damage other players. Make sure you have enough HP to survive a single explosion, in case you get caged on top of an explosion
+
+If you get linked by people, try to stay close with them. If you get linked up with the tank, stay close to the tank
 
 ### AB
 
@@ -117,7 +119,14 @@ Keep your ressurection skill off auto, and start ressing at 59%. Keep healing to
 
 ### Tank
 
-In the first phases, stay close to the MVP and keep taunting
+In the first phases, stay close to the MVP and keep taunting. Make sure you dodge the circles explosions, then go back to taunting. If a DPS gets linked up with you, they should stay near you.
 
 ### Shotcaller
 
+It is possible to convert this boss to water. If you do not have a lot of mechanics on your party, but a lot of people who can use wind damage, it can be beneficial to convert to water. Make sure everybody in the party knows what you're using
+
+For novice, there is not a lot to call out. Try to call out the people with the ceilling laser chasing them, and make them break the chains. Call out the gravitational bodies to make sure people break them before they grow too many
+
+For brave, call out the people caged, so people who have the ceilling laser on them know who to go to. Also, in the later phases, there can be a laser wall coming, not everybody can currently see this wall, so try to keep an eye on the minimap and call the wall
+
+For Legend, do all of the above, and make sure you call out the 59% mark, and keep an eye on the resurrections. When resurrections get low, let the ABs focus resses on tank and top DPS
