Changed layout a lot

--- a/weekly/tt/3f.md
+++ b/weekly/tt/3f.md
@@ -6,8 +6,8 @@
 HP: 80M / 200M / 600M  
 Element: **Ghost**  
 Race: 
-Size: **Large**
-100% def/mdef% (a.k.a. need 200% ignore)
+Size: **Large**  
+Recommended settings: character models on, effects off, protect party off
 
 ## General Mechanics
 
